[package]
name = "arhm_dialog_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx ={version =  "0.8.2", features = ["postgres", "chrono", "runtime-async-std", "runtime-tokio"]}
dotenv = "0.15"
rocket = {version = "0.5", features = ["json"]}
rocket_cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
bcrypt = "0.10"
cuid = "1.3"
sha2 = "0.11.0-pre.4"
hex = "0.4"
